# Coursework-1-BSUIR

./: .gitignore  Admin.cpp  CMakeLists.txt  ClassDiagram.cd  Functions.cpp  Kursach.sln  Kursach.vcxproj  Kursach.vcxproj.filters  MainMenu.cpp  Menus.h  README.md  SHA256.cpp  SHA256.h  Start.cpp  User.cpp  admins.txt  catalog.txt  users.txt
data/: admins.json  catalog.json  catalog.txt  users.json
lib/: json.hpp
src/: Admin.cpp  Date.cpp  Date.h  Functions.cpp  Header.h  Menu.h  Menus.h  User.cpp
src/Data/: Catalog.cpp  Catalog.h  Date.cpp  Date.h  Deal.cpp  Deal.h
src/Users/: AbstractUser.cpp  AbstractUser.h  AbstractUserImpl.h  Admin.cpp  Admin.h  User.cpp  User.h
